# caracterisation

./: CMakeLists.txt  caracterisation.kdev4
Rapport/: part1.tex  part2.tex  rapport.tex
Rapport/figure/: .directory  rch10_compare_temps.tex  rch10_gamma_vs_gamma_dynamique_nbComp.tex  rch10_gamma_vs_gamma_dynamique_temps.tex  rch10_sh_vs_gamma_dynamique_nbComp.tex  rch10_sh_vs_gamma_nbComp.tex  rch10_sh_vs_gamma_temps.tex  rch10_sh_vs_pmda_nbComp.tex  rch10_sh_vs_pmda_temps.tex  rch10_sh_vs_tabou_nbComp.tex  rch10_sh_vs_tabou_temps.tex  rch10_sh_vs_tau_nbComp.tex  s3836_compare_nbComp.tex  s3836_sh_vs_gamma_nbComp.tex  s3836_sh_vs_gamma_temps.tex  s3836_sh_vs_pmda_nbComp.tex  s3836_sh_vs_pmda_temps.tex  s3836_sh_vs_tabou_nbComp.tex  s3836_sh_vs_tabou_temps.tex  sh_rch10_s3836_nbComp.tex  sh_rch10_s3836_temps.tex
Rapport/graphique/: .directory  heuristique_masque1_avec_worst_first_rarep_nbComp  heuristique_masque1_avec_worst_first_rch10_nbComp  heuristique_masque1_avec_worst_first_rch10_temps  heuristique_masque1_sans_worst_first_rch10_nbComp  heuristique_masque1_sans_worst_first_rch10_temps  heuristique_masque2_avec_worst_first_rarep_nbComp  heuristique_masque2_avec_worst_first_rch10_nbComp  heuristique_worst_first_rch10_nbComp  heuristique_worst_first_rch10_temps  heuristique_worst_first_s3836_nbComp  heuristique_worst_first_s3836_temps  sans_heuristique_randomS3836_nbComp  sans_heuristique_randomS3836_temps  sans_heuristique_rch10_nbComp  (+1 more)
Rapport_Presentation/: .directory  presentation.aux  presentation.nav  presentation.out  presentation.toc  presentation.vrb  rapport.aux  rapport.bbl  rapport.blg  rapport.lof  rapport.out  rapport.toc
src/: algo.cpp  algo.h  comb.h  combinaison.cpp  combinaison.h  entite.cpp  entite.h  gene.cpp  gene.h  groupe.cpp  groupe.h  instance.cpp  instance.h  main.cpp  rechercheapproche.cpp  rechercheapproche.h  saxhandler.cpp  saxhandler.h  solveur.cpp  solveur.h  standard.cpp  standard.h  standard.hpp
(+32 files in other folders)
